Removed footer from App.js because it would not adjust upon smaller screen sizes - will fix later. Added profile picture, flex positioning, and text to about page. Added drop shadow to profile pic. Made minor tweaks and experimented with grid layout for about page.

--- a/src/App.css
+++ b/src/App.css
@@ -148,6 +148,31 @@ section {
 /******************/
 /*** About Page ***/
 /******************/
+.about-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  width: auto; }
+
+.profile-picture {
+  width: 300px;
+  height: 300px;
+  border-radius: 10rem;
+  margin: 3rem;
+  box-shadow: 0 1rem 2rem #888888;
+  transition: 0.5s; }
+
+.description-container {
+  width: 400px;
+  border: 1px solid black;
+  margin-top: 3rem;
+  transition: 0.5s; }
+  @media (max-width: 800px) {
+    .description-container {
+      text-align: center; } }
+
 /*********************/
 /*** Projects Page ***/
 /*********************/
